src/test/resources/org/rust/ide/inspections/fixtures/unresolved_module_declaration.rs
<error descr="Unresolved module">mod foo;</error>

fn main() {}
